syntax = "proto3";
package deshchain.moneyorder;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/deshchain/deshchain/x/moneyorder/types";

// MoneyOrderReceipt represents a digital receipt for Money Order transactions
message MoneyOrderReceipt {
  // Basic Information
  string order_id = 1;
  string reference_number = 2;
  string transaction_type = 3; // "instant", "normal", "scheduled"
  
  // Sender Details
  string sender_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string sender_name = 5;
  string sender_mobile = 6;
  string sender_postal_code = 7;
  
  // Receiver Details
  string receiver_address = 8 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string receiver_name = 9;
  string receiver_mobile = 10;
  string receiver_postal_code = 11;
  
  // Transaction Details
  cosmos.base.v1beta1.Coin amount = 12 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin fees = 13 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin total_amount = 14 [(gogoproto.nullable) = false];
  string exchange_rate = 15 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  
  // UPI-Style Simple Message
  string note = 16;
  string purpose = 17; // "family", "business", "emergency"
  
  // Status Tracking
  string status = 18;
  string status_message = 19;
  
  // Cultural Touch
  string cultural_quote = 20;
  string festival_greeting = 21;
  string language = 22;
  
  // Digital Features
  string qr_code = 23;
  string tracking_url = 24;
  bool sms_notification = 25;
  bool email_notification = 26;
  
  // Timestamps
  google.protobuf.Timestamp created_at = 27 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp processed_at = 28 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp completed_at = 29 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp expires_at = 30 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// UPIStyleTransfer represents a simplified UPI-like transfer request
message UPIStyleTransfer {
  string receiver_upi = 1;
  string amount = 2;
  string note = 3;
  string sender_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string receiver_address = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin fees = 6 [(gogoproto.nullable) = false];
}

// SimplifiedOrderStatus for UPI-style display
message SimplifiedOrderStatus {
  string status_icon = 1;
  string status_text = 2;
  string status_color = 3;
  string amount = 4;
  string receiver_name = 5;
  string time = 6;
  repeated OrderAction actions = 7;
}

// OrderAction represents actions available for an order
message OrderAction {
  string label = 1;
  string icon = 2;
  string action_type = 3;
  bool enabled = 4;
}

// QuickTransferTemplate for frequent transfers
message QuickTransferTemplate {
  string template_id = 1;
  string template_name = 2;
  string icon_emoji = 3;
  string receiver_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string receiver_name = 5;
  string default_amount = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string default_note = 7;
  uint64 usage_count = 8;
  google.protobuf.Timestamp last_used = 9 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

// VirtualPaymentAddress for UPI-style addressing
message VirtualPaymentAddress {
  string vpa = 1; // ramesh@deshchain
  string linked_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string display_name = 3;
  string profile_picture = 4;
  bool verified_merchant = 5;
  google.protobuf.Timestamp created_at = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}